Added security to the proxy.

--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
                     </section>
                     <section>
                         <h2>Value Set Entities</h2>
-                        <p>Hover over bolded terms in the text below to see more information. </p>
+                        <p>Hover over bolded terms in the text below to see more information.</p>
                         <div class="typeahead-demo well">
                             The patient was taken by<span class="annotated valueset" data-uri="http://phast.fr/sts/valueset/2.16.840.1.113883.1.11.19732/entity/AMBGRND"><b> ground ambulance</b></span>, but later was tranferred to another facility via <span class="annotated valueset" data-uri="http://phast.fr/sts/valueset/2.16.840.1.113883.1.11.19732/entity/AMBHELO"><b>helicopter</b></span>.
                         </div>
                     </section>
                     <section>
                         <h2>Concept Domains</h2>
+                        <p>Hover over bolded terms in the text below to see more information.</p>
                         <div class="typeahead-demo well">
                             More info available for the <span class="annotated conceptdomain" data-uri="http://phastservices.cloudapp.net/REST/sts_rest_beta_2/0000/conceptdomain/ActAdjudicationReason"><b>ActAdjudicationReason</b></span> Concept Domain.
                         </div>
@@ -67,7 +68,10 @@
 
                 <aside>
                     <h3>About</h3>
-                    <p>These examples demonstrate the Phast CTS2 service, and how the XML content from the Phast Service can be used to enhnace various aspects of an HTML page.</p>
+                    <p>These examples demonstrate the Phast CTS2 service, and how the XML content from the
+                        Phast Service can be used to enhnace various aspects of an HTML page.</p>
+                    <br/>
+                    <p>All example code can be viewed on <a href="https://github.com/cts2/cts2phast">GitHub</a>.</p>
                 </aside>
 
             </div> <!-- #main -->
