--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <nav>
                     <ul>
                         <li><a href="http://www.phast.fr">Phast</a></li>
-                        <li><a href="informatics.mayo.edu/cts2">CTS2</a></li>
+                        <li><a href="http://informatics.mayo.edu/cts2">CTS2</a></li>
                         <li><a href="https://github.com/cts2/cts2phast">Code</a></li>
                     </ul>
                 </nav>
@@ -68,7 +68,7 @@
 
                 <aside>
                     <h3>About</h3>
-                    <p>These examples demonstrate the Phast CTS2 service, and how the XML content from the
+                    <p>These examples demonstrate the Phast CTS2 Service, and how the XML content from the
                         Phast Service can be used to enhnace various aspects of an HTML page.</p>
                     <br/>
                     <p>All example code can be viewed on <a href="https://github.com/cts2/cts2phast">GitHub</a>.</p>
