Updated some typos.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>(c) 2013 <a href="informatics.mayo.edu/cts2">CTS2</a> Team</h3>
+                <h3>(c) 2013 <a href="http://informatics.mayo.edu/cts2">CTS2</a> Team</h3>
             </footer>
         </div>
 
