--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <aside>
                     <h3>About</h3>
                     <p>These examples demonstrate the <a href="http://www.phast.fr">Phast</a> CTS2 Service, and how the XML content from the
-                        Phast Service can be used to enhnace various aspects of an HTML page.</p>
+                        Phast Service can be used to enhance various aspects of an HTML page.</p>
                     <br/>
                     <p>All example code can be viewed on <a href="https://github.com/cts2/cts2phast">GitHub</a>.</p>
                 </aside>
